<resources>
    <string name="app_name">Exercise 2: Marveen Bernabe</string>
    <string name="start">START</string>
    <string name="retry">RETRY</string>
    <string name="persona_5_logo">persona 5 logo</string>
    <string name="title">WHICH PERSONA 5 CHARACTER ARE YOU</string>
    <string name="start_text">LET US START THE GAME</string>
    <string name="ann_name">ANN TAKAMAKI</string>
    <string name="futaba_name">FUTABA SAKURA</string>
    <string name="goro_name">GORO AKECHI</string>
    <string name="haru_name">HARU OKUMMURA</string>
    <string name="makoto_name">MAKOTO NIIJIMA</string>
    <string name="morgana_name">MORGANA</string>
    <string name="newgirl_name">KASUMI YOSHIZAWA</string>
    <string name="ryuji_name">RYUJI SAKAMOTO</string>
    <string name="yusuke_name">YUSUKE KITAGAWA</string>
    <string name="joker_text">
        Akira Kurusu/Ren Amamiya of Persona 5 is a transfer student at Shujin Academy. At the beginning of the game,
        he has little to no power or influence in the world and is restrained by the rules of the system he was born into.
        However, beneath his quiet demeanor is a strong-willed juvenile delinquent known throughout the world as The Phantom,
        to the residents of the Velvet Room he is known as the Trickster, and to his teammates his code name is Joker.
        Ren/Akira is the leader of the rebellious Phantom Thieves of Hearts which aims to change society by touching
        the hearts of people and performing illegal heists. \n
        As per the tradition of the Megami Tensei franchise, he is a silent protagonist, whose personality is based on the player*s actions and decisions. However, he appears to have more established traits than any of the previous protagonists.
        His dialogue options range from somewhat indifferent to outright cheeky. The game allows for quite a number of playful, snarky or audacious answers, including teasing his friends.
        He also taunts his enemies like the famed Arsène Lupin. In the prologue scene, he remains cocky and confident even when his life is in danger. </string>
    <string name="ann_text">
        Ann is a second year high schooler at Shujin Academy, which she calls a *sorry excuse of a school.* Ann is the classmate of the protagonist in 2-D, and she and Ryuji Sakamoto were classmates in middle school.
        Due to her foreign blood and living abroad before the story, she does not have many friends there and is considered an outcast in Shujin. According to the art book, her parents are away from home and she lives with *servants.(
        Ann mentions she had a live-in caretaker, so these *servants* are likely caretakers. Both her parents are fashion designers who put on extravagant shows, and that they jump from country to country, so Ann does not see them that often.
        It is revealed that Ann also used to live in Finland. \n\n © From Megami Tensei Wiki || https://megamitensei.fandom.com/wiki/Ann_Takamaki
    </string>
    <string name="futaba_text">Futaba is a young, bespectacled girl with hip length black hair dyed bright orange with straight-cut bangs and two long strands in the front along with a single small, thin ahoge strand at the top.
        Her brown eyes also seem to have some faint purple tones in them, appearing mauve. She wears large black circular glasses,
        and she is always seen wearing a set of AKG K845BT headphones with red earpads. She seems to be very short, even compared to other girls.
        Her casual winter outfit consists of multiple layers; she wears an off-shoulder white top with a red splatter-like pattern on her chest with five white asterisks (*****) which are reminiscent of a passport input system in the red splatter, a black tank top underneath that,
        a dark green jacket with a faux fur trimmed hood, black short shorts, a studded black belt in a slanted position, black thigh highs socks and black knee-high boots with buckles and studs at the top.
        The green jacket has A.F.K. on the back (for *away from keyboard*), although it is difficult to see because of Futaba*s long hair. \n\n © From Megami Tensei Wiki: https://megamitensei.fandom.com/wiki/Futaba_Sakura </string>
    <string name="goro_text">During most of the story, Akechi appears to be well-mannered, friendly and charismatic high-school detective. Coupled with his achievement as a detective and handsome feature, Akechi is highly popular among the public and is commented to be *The Second Coming of Detective Prince.* His intelligence and smooth-talk earned him enough trust from the police to conduct his own investigation despite his young age, which includes Sae Niijima, who fully trusts him to assist her in her investigation.
He presents himself to have a strong sense of justice, disapproving of the Phantom Thieves of Hearts for their methods and is candid in expressing his disagreement, but never forces his view on others and still respect people who have different opinion from him.
In reality, this cheery disposition is merely a mask that hides his inner darkness. Akechi is lonely and yearns to be loved, in addition to being born via illegitimate means. He was born when Masayoshi Shido molested a prostitute and left him and his mother alone without even accepting an apology, subsequently lost her to suicide and never had close friends.
        He was passed around child institutions as an orphan and has developed a far more jaded worldview than he initially lets on, even calling himself an unwanted child. The abandonment and abuse caused him to have a desperate desire to be acknowledged, which he is forthright about being the primary drive for his actions as a detective.
        He also has a narcissistic element to his personality, wishing for others to see him as a hero and those who oppose him as the villains. Akechi claims that he has carefully crafted his public image in the hopes that it would make people accept him. He has the public*s support only if he upholds the pretense of being a charismatic idol detective, and his fans are quick to turn on him if he makes mistakes,
        such as when the Phantom Thieves triumphed over Kaneshiro and Medjed. </string>
    <string name="haru_text">Haru is generally very shy and reserved. At school, she is viewed as eccentric due to her tendency to keep to herself and avoid contact with others as much as possible. She has serious trust issues, finding it difficult to differentiate between who truly values her as a friend, and who merely wants to use her for her familys status. This is due to her past, where not only friends, but adults and teachers would be kind at her just to please her father and smiled at her for their own personal gain. Despite this, Haru is an incredibly kind-hearted girl; she becomes fast friends with all of the Phantom Thieves,
        and is the only member of the group Ryuji Sakamoto does not argue with on a regular basis. She can also be very awkward, as shown when she first introduces herself to the others as *Beauty Thief,* and forgets parts of the script she has rehearsed with Morgana, to the point of saying *We will take the Treasure.* twice in a row, much to Futaba Sakuras ire. She later explains that she was trying to be a *heroine of justice,* having grown up admiring female superheroes she watched on TV. She loved them for always fighting to protect others and being happy, desiring to be just like them someday.
At first, Haru is reluctant to team up with the other Phantom Thieves, saying she can*t cooperate with people who don*t know what they want to do, and calls them out for turning their backs on their own teammate when their goal is supposed to be to help the weak. After her real desires are brought to light, however (namely, to get out of her arranged marriage with her abusive fiance), she changes her mind and decides to team up with the Thieves to change her father*s heart. Despite this, she is initially still reluctant to oppose her father, and as a result hasn*t fully awakened to her Persona, though this changes once she learns that her father has no illusions of the kind of man her fiance is,
        and declares that she is no longer his *subservient puppet.* Afterwards, she decides on the codename *Noir* (the French word for *black*), to remind herself that she is operating on the darker side of the law despite her desire to be a heroine of justice. As such, she is rather surprised to discover that the others decided on their codenames based merely on how their outfits look, when she had created such an elaborate backstory for hers. \n\n </string>
    <string name="makoto_text">Makoto has brown hair in a bob cut with blunt bangs and a French-braid styled headband that matches her hair color. Her eyes are abnormal as they have been depicted as red, although her eye color in her portraits can be interpreted as a reddish-brown. She is of average female height, being taller than Futaba Sakura and Haru Okumura, but slightly shorter than Ann Takamaki. \n Despite being the student council president, Makoto is an extremely unpopular student at Shujin Academy; due to her not doing anything to stop Suguru Kamoshida*s abuse, she is considered by all the students to be an arrogant, selfish control freak who knew about the abuse but chose to do nothing about it because she only cared about getting a good letter of recommendation.
        While she does give off the impression of this during the Phantom Thieves* first few encounters with her, these rumors are ultimately revealed to be just that: rumors. In truth, the abuse outraged Makoto, but she didn*t feel like she had the power to do anything about it.
        In fact, Makoto holds no real authority in the school, with her position merely making her a glorified tool for the principal to use however he sees fit. Feeling overshadowed by her highly successful older sister, Makoto has almost no sense of self-worth, and so has made a habit of keeping her nose down and doing what is expected of her. Her submissive nature is noted by Goro Akechi, who condescendingly refers to her as *the good-girl type of pushover.* After getting involved with the Phantom Thieves, however, Makoto realizes her frustration at the authority figures around her not living up to the expectations they*ve set for themselves,
        and vows from then on to fight for what she believes in, which triggers the awakening of her Persona. After the group defeat Junya Kaneshiro, Makoto decides to stay with the Phantom Thieves, saying that she*s done being the *exemplary honour student* and that she*s going to try to be more honest with herself.</string>
</resources>