<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/p5_image"
        android:layout_width="match_parent"
        android:layout_height="366dp"
        android:contentDescription="@string/persona_5_logo"
        android:src="@drawable/p5logo"
        tools:srcCompat="@drawable/p5logo" />

    <Button
        android:id="@+id/roll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/retry" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/start_text"
            android:textAlignment="center"
            android:textStyle="italic" />
    </ScrollView>

</LinearLayout>
